<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AF SDK Sample</string>
    <string name="app_title">AudioFetch SDK Sample</string>
    <string name="play_pause">Play / Pause</string>

    <string name="fetching_audio">Fetching Audio&#8230;</string>
    <string name="actionbar_title"></string>

    <string name="settings">Settings</string>
    <string name="confirm">Confirm</string>

    <!-- Prefs Screen -->
    <string name="pref_latency_key">bufferLatency</string>
    <string name="pref_audio_settings">AUDIO SETTINGS</string>
    <string name="pref_key_set_buffer">Listening Mode</string>
    <string name="pref_key_set_buffer_msg">Select Music mode, or TV Audio mode (default).</string>
    <string name="listening_mode_set">Set listening mode to %1$s&#8230;</string>


    <string name="no_connection_message">A connection was not found.  Please ensure that you are connected to an AudioFetch enabled WiFi network and restart the app.</string>
    <string name="status_nowifi">Device is disconnected from Wifi.  Please check Wifi settings.</string>
    <string name="status_wifioff">Please turn on your device\&#39;s WiFi.</string>

    <string name="wifi_alert_title">Connect to AudioFetch WiFi</string>
    <string name="wifi_alert_msg">Please connect to an AudioFetch-enabled WiFi.</string>

    <string name="channels_not_loaded">No channels found!</string>
    <string name="loading_channels">Loading Channels&#8230;</string>
    <string name="label_channel">Channel</string>
    <string name="label_current_channel">Current Channel:</string>
    <string name="label_volume">Volume</string>
    <string name="filter_title_view_audiofetch">View AudioFetch</string>

    <string name="battery_optimization_title">Notice</string>
    <string name="battery_optimization_msg">When first installing the AudioFetch SDK Sample App, choose YES on &quot;Do not optimize battery usage&quot; or &quot;Ignore Optimizations&quot; to ensure clear audio.  Delete and reinstall the AudioFetch App if necessary.</string>
</resources>
