<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_audio_settings"
        android:key="pref_key_storage_settings">
        <ListPreference
            android:key="@string/pref_latency_key"
            android:persistent="true"
            android:dialogTitle="@string/pref_key_set_buffer"
            android:dialogIcon="@drawable/ic_launcher"
            android:icon="@drawable/ic_launcher"
            android:summary="@string/pref_key_set_buffer_msg"
            android:title="@string/pref_key_set_buffer"
            android:entries="@array/pref_buffer_choice_names"
            android:entryValues="@array/pref_buffer_choice_values"
            android:defaultValue="@string/pref_buffer_default" />
    </PreferenceCategory>
</PreferenceScreen>