<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_gravity="center"
        android:layout_width="152dp"
        android:layout_height="39dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/af_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/label_volume"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_volume"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/volume_slider"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progress="65"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/seekbar_thumb"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:minHeight="3dip"
        android:maxHeight="3dip"
        app:layout_constraintTop_toBottomOf="@id/label_volume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/current_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/volume_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/label_current"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/label_current_channel"
            android:layout_gravity="end"
            android:textAlignment="textEnd" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="start"
            android:textSize="12sp"
            android:text="@string/loading_channels"
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="12sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/label_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/afetch_red"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/no_connection_message"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/current_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <GridView
        android:id="@+id/channel_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:minHeight="150dp"
        android:columnWidth="48dp"
        android:overScrollMode="always"
        android:numColumns="auto_fit"
        android:verticalSpacing="20dp"
        android:horizontalSpacing="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/current_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/play_pause_button" />

    <ImageButton
        android:id="@+id/play_pause_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/afetch_orange"
        android:src="@drawable/ic_pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/play_pause"/>
</android.support.constraint.ConstraintLayout>